tests/parser-test-files/bad-files/parse-while.3.error
error: Malformed while expression
  --> test:4:23
   |
 4 |  (define f (while :label))
   |                         ^ expected condition
